--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,15 @@
     ],
     "cSpell.words": [
         "bycrypt",
+        "fortawesome",
         "Jwts",
         "onlinemarket",
         "PUBLICUSER",
         "Servlet",
         "Signin",
         "springframework",
-        "userdetails"
+        "userdetails",
+        "Xmark"
     ],
     "java.configuration.updateBuildConfiguration": "automatic"
     
