products,cart feature added

--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,13 @@
         "@angular/platform-browser-dynamic": "^17.3.12",
         "@angular/router": "^17.3.12",
         "@fortawesome/angular-fontawesome": "^0.14.0",
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@ngrx/effects": "^18.0.2",
+        "@ngrx/store": "^18.0.2",
         "ngx-spinner": "^17.0.0",
+        "ngx-toastr": "^19.0.0",
         "ngx-ui-loader": "^13.0.0",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
