--- a/client/angular.json
+++ b/client/angular.json
@@ -88,7 +88,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css" 
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css" ,
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           }
